--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -12,11 +12,20 @@
 }
 
 .search-not-found {
-  min-height: 60vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.search-not-found-dark {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
 
 .no-search-image {
@@ -52,6 +61,16 @@
 
 .heeed {
   color: #262626;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 160% */
+}
+
+.heeeddark {
+  color: white;
   text-align: center;
   font-family: Roboto;
   font-size: 20px;
@@ -101,30 +120,54 @@
   line-height: 24px; /* 150% */
 }
 
+.err-msg-server-dark {
+  color: white;
+
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+}
+
 .failure-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 70vh;
+  min-height: 100vh;
+}
+
+.failure-container-dark {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: black;
 }
 
 .eoorr-image {
   width: 80vw;
+  border-radius: 10px;
 }
 
 @media (min-width: 768px) {
   .no-search-image {
     width: 30vw;
   }
-  .heading-for-search {
-    text-align: center;
-    display: block;
-  }
 
   .heeed {
     color: #262626;
-
+    text-align: center;
+    font-family: Roboto;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 48px; /* 150% */
+  }
+  .heeed {
+    color: white;
     text-align: center;
     font-family: Roboto;
     font-size: 32px;
@@ -144,5 +187,14 @@
   }
   .eoorr-image {
     width: 40vw;
+  }
+  .err-msg-server-dark {
+    color: white;
+
+    font-family: Roboto;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
   }
 }
