--- a/src/components/Myprofile/index.css
+++ b/src/components/Myprofile/index.css
@@ -19,6 +19,15 @@
   line-height: 24px; /* 150% */
 }
 
+.nameforuser-dark {
+  color: white;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px; /* 150% */
+}
+
 .profile-for-user {
   width: 96px;
   height: 96px;
@@ -38,8 +47,30 @@
   margin: 0px;
 }
 
+.posts-count-dark {
+  color: white;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  padding: 0px;
+  margin: 0px;
+}
+
 .posta {
   color: #262626;
+  padding: 0px;
+  margin: 0px;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 133.333% */
+}
+
+.posta-dark {
+  color: white;
   padding: 0px;
   margin: 0px;
   font-family: Roboto;
@@ -74,9 +105,32 @@
   line-height: 24px; /* 150% */
 }
 
+.user-id-dark {
+  color: white;
+
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  padding: 0px;
+  line-height: 24px; /* 150% */
+}
+
 .user-bio {
   width: 90vw;
   color: #262626;
+  padding: 0px;
+  margin: 0px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+}
+
+.user-bio-dark {
+  width: 90vw;
+  color: white;
   padding: 0px;
   margin: 0px;
   font-family: Roboto;
@@ -123,10 +177,29 @@
   flex-shrink: 0;
 }
 
+.griddark {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  color: white;
+}
+
 .posts-para {
   padding: 0px;
   margin: 0px;
   color: #262626;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 171.429% */
+  padding-left: 5px;
+}
+
+.posts-para-dark {
+  padding: 0px;
+  margin: 0px;
+  color: white;
   font-family: Roboto;
   font-size: 14px;
   font-style: normal;
@@ -163,6 +236,72 @@
   flex-shrink: 0;
 }
 
+.no-posts-view-for-user {
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.no-p-icon {
+  font-size: 25px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.no-p-icon-dark {
+  font-size: 25px;
+  padding: 0px;
+  margin: 0px;
+  color: white;
+}
+
+.npy {
+  color: #262626;
+
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px; /* 133.333% */
+}
+.npydark {
+  color: white;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px; /* 133.333% */
+}
+.iconx {
+  width: 48px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 24px;
+  border: 1.116px solid #262626;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.iconxdark {
+  width: 48px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 24px;
+  border: 1.116px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-for-profile-user-dark {
+  background-color: black;
+}
+
 @media (min-width: 768px) {
   .profile-container-for-lg {
     display: block;
@@ -177,6 +316,30 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+  }
+
+  .no-posts-view {
+    width: 86px;
+    height: 86px;
+    flex-shrink: 0;
+  }
+
+  .npy {
+    color: #262626;
+    font-family: Roboto;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 48px; /* 150% */
+  }
+
+  .npydark {
+    color: white;
+    font-family: Roboto;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 48px; /* 150% */
   }
 
   .container-for-overall {
@@ -203,6 +366,18 @@
     padding-bottom: 20px;
     margin: 0px;
   }
+
+  .nameforuser-dark {
+    color: white;
+    font-family: Roboto;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 32px; /* 100% */
+    padding: 0px;
+    padding-bottom: 20px;
+    margin: 0px;
+  }
   .posts-info-container {
     display: flex;
     flex-direction: row;
@@ -218,15 +393,34 @@
 
   .posts-count {
     color: #262626;
-
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px; /* 150% */
   }
+
+  .posts-count-dark {
+    color: white;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+  }
+
   .posta {
     color: #262626;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    padding-left: 5px;
+  }
+
+  .posta-dark {
+    color: white;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -243,8 +437,27 @@
     font-weight: 500;
     line-height: 24px; /* 150% */
   }
+
+  .user-id-dark {
+    color: white;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+  }
   .user-bio {
     color: #262626;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    width: 60vw;
+  }
+
+  .user-bio-dark {
+    color: white;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -278,6 +491,12 @@
     height: 24px;
     flex-shrink: 0;
   }
+  .griddark {
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+    color: white;
+  }
 
   .posts-para {
     color: #262626;
@@ -288,9 +507,20 @@
     font-weight: 500;
     line-height: 32px; /* 133.333% */
   }
+
+  .posts-para-dark {
+    color: white;
+    margin-left: 10px;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px; /* 133.333% */
+  }
   .hori {
     margin-top: 20px;
     margin-bottom: 20px;
+    width: 100vw;
   }
   .list-for-post {
     margin: 25px;
