--- a/src/components/UserProfile/index.css
+++ b/src/components/UserProfile/index.css
@@ -177,10 +177,29 @@
   flex-shrink: 0;
 }
 
+.griddark {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  color: white;
+}
+
 .posts-para {
   padding: 0px;
   margin: 0px;
   color: #262626;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 171.429% */
+  padding-left: 5px;
+}
+
+.posts-para-dark {
+  padding: 0px;
+  margin: 0px;
+  color: white;
   font-family: Roboto;
   font-size: 14px;
   font-style: normal;
@@ -217,7 +236,7 @@
   flex-shrink: 0;
 }
 
-.no-posts-view {
+.no-posts-view-for-user {
   min-height: 50vh;
   display: flex;
   flex-direction: column;
@@ -231,6 +250,13 @@
   margin: 0px;
 }
 
+.no-p-icon-dark {
+  font-size: 25px;
+  padding: 0px;
+  margin: 0px;
+  color: white;
+}
+
 .npy {
   color: #262626;
 
@@ -240,13 +266,32 @@
   font-weight: 300;
   line-height: 24px; /* 133.333% */
 }
-
+.npydark {
+  color: white;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px; /* 133.333% */
+}
 .iconx {
   width: 48px;
   height: 48px;
   flex-shrink: 0;
   border-radius: 24px;
   border: 1.116px solid #262626;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.iconxdark {
+  width: 48px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 24px;
+  border: 1.116px solid white;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -281,6 +326,15 @@
 
   .npy {
     color: #262626;
+    font-family: Roboto;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 48px; /* 150% */
+  }
+
+  .npydark {
+    color: white;
     font-family: Roboto;
     font-size: 32px;
     font-style: normal;
@@ -437,10 +491,26 @@
     height: 24px;
     flex-shrink: 0;
   }
+  .griddark {
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+    color: white;
+  }
 
   .posts-para {
     color: #262626;
 
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px; /* 133.333% */
+  }
+
+  .posts-para-dark {
+    color: white;
+    margin-left: 10px;
     font-family: Roboto;
     font-size: 24px;
     font-style: normal;
